<resources>
    <string name="app_name">Leanote</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_pre_note">Note</string>
    <string name="title_activity_edit_note">Edit</string>
    <string name="title_activity_choose_notebook">Choose notebook</string>
    <string name="cant_open_url">Can\'t open this url</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_custom_website">Custom website</string>
    <string name="action_forget_password">Forget password?</string>
    <string name="edittext_hint_custom_website_url">Your custom website url</string>
    <string name="activity_login_progress_dialog_message">Sign In&#8230;</string>
    <string name="activity_login_email_or_pwd_invalid">Email or password not empty</string>

    <string name="network_is_unavailable">Network is unavailable</string>
    <string name="network_error">Network error</string>

    <!-- note -->
    <string name="note_menu_move_notebook">Move to</string>
    <string name="note_menu_edit">Edit</string>
    <string name="note_menu_refresh">Refresh</string>
    <string name="note_menu_more">More</string>
</resources>
