<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <WebView
        android:id="@+id/web_view"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        android:background="@color/line_gray"
        android:id="@+id/bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="4"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/menu_move"
                android:layout_width="26dp"
                android:src="@drawable/ic_menu_move_notebook"
                android:layout_height="26dp" />
            <TextView
                android:text="@string/note_menu_move_notebook"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/menu_edit"
                android:layout_width="26dp"
                android:src="@drawable/ic_menu_edit"
                android:layout_height="26dp" />
            <TextView
                android:text="@string/note_menu_edit"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="26dp"
                android:src="@drawable/ic_menu_refresh_gray"
                android:layout_height="26dp" />
            <TextView
                android:text="@string/note_menu_refresh"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="26dp"
                android:src="@drawable/ic_menu_more"
                android:layout_height="26dp" />
            <TextView
                android:text="@string/note_menu_more"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textSize="12sp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>